[project]
name = "blanca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "gtts>=2.5.4",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-xai>=1.2.2",
    "langgraph>=1.1.3",
    "pydub>=0.25.1",
    "requests>=2.33.0",
    "streamlit>=1.55.0",
    "streamlit-mic-recorder>=0.0.8",
    "streamlit-player>=0.1.5",
    "yt-dlp>=2026.3.17",
]
